# -invoiceai-

./: index.html  package.json  pyproject.toml  requirements.txt  routes.py  tasks.json  vercel.json
api/: generate-proposal.js  index.py
src/: App.jsx  App.tsx  types.ts
src/lib/: api.ts
src/pages/: DashboardPage.tsx  InvoicesPage.tsx  LoginPage.tsx  ProposalsPage.tsx
